# CryptoCore

./: CHANGELOG.md  COMMANDS_CHEATSHEET.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SETUP_UBUNTU_24_04.md  all_tests.py  build.bat  build_py.bat  decrypted.txt  plaintext.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  run_tests_py.sh  sample.cmac  sample.sha3  test.enc  test_data.txt  test_data.txt.cbc.enc  test_gcm_simple.py  test_hmac.txt  test_runner.sh  результаты.md  результаты_M1.md  результаты_M2.md  результаты_M3.md  результаты_M4.md  результаты_M5.md  результаты_M6.md  результаты_M7.md  результаты_M8.md
docs/: API.md  DEVELOPMENT.md  USERGUIDE.md
include/: cli_parser.h  crypto.h  file_io.h
include/modes/: cbc.h  cfb.h  ctr.h  ecb.h  ofb.h
pycryptocore/: __init__.py  cli.py  crypto_core.py  csprng.py  file_io.py  kdf.py  kdf_legacy.py
pycryptocore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pycryptocore/hash/: sha3_256.py
pycryptocore/kdf/: pbkdf2.py
pycryptocore/mac/: __init__.py
pycryptocore/modes/: gcm.py
src/: cli_parser.c  cli_parser.py  crypto_utils.c  file_io.c  file_io.py  main.c
src/modes/: cbc.c  cbc.py  cfb.c  cfb.py  ctr.c  (+5 more)
tests/: test_cli_additional.py  test_cli_comprehensive.py  test_cli_derive.py  test_cmac.py  test_crypto_core.py  test_crypto_core_streaming.py  test_csprng.py  test_ecb.py  test_file_io.py  test_gcm.py  test_hash.py  test_hierarchy.py  test_hmac.py  test_kdf_legacy.py  test_modes.py  test_openssl_interop.py  test_pbkdf2.py  test_python_cli.py  test_sha3_256.py
